ugh further fixes to overflow issue - on my iPhone SE (width 320px) there's a discrepancy between Proj Desc and Submit YP, had to add id tag to Proj Desc to account for it, but now all is well! also made banner centered when small and down, left looks weird to me...

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -169,6 +169,17 @@ a.username{
   }
 }
 
+@media (max-width: 320px) {
+  .sidenav li > a.overflow {
+    line-height: 1.25em;
+    height: auto;
+  }
+  .sidenav li > a#less-overflow {
+    line-height: 2.5em;
+    height: auto;
+  }
+}
+
 #social-nav a {
   border-bottom: 2px solid transparent;
 }
