--- a/_sass/scaffolds.scss
+++ b/_sass/scaffolds.scss
@@ -332,7 +332,7 @@ li.sticky-nav{
   }
   .project-banner-blob {
     flex: 1;
-    text-align: left;
+    text-align: center;
   }
 }
 .project-banner-elem div {
